test/classes/initializers/phase1/grandparentAccess.good
grandparentAccess.chpl:22: In initializer:
grandparentAccess.chpl:23: error: Cannot access inherited field 'a' during phase 1
